--- a/harsh/src/helper/index.html
+++ b/harsh/src/helper/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Terminal Text</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -15,17 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&display=swap" rel="stylesheet"> 
+  <link href="style.css" rel="stylesheet">
+ 
 </head>
 <body class="flex-center">
   <div class="root">
+    <div id="progressbar"></div>
     <div class="control">
       <span class="hidden">-></span>
     </div>
   </div>
+  
 </body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
+<script src="ascii-progress.js"></script>
 
-</body>
+<script src="script.js"></script>
 </html>
