--- a/src/dwij/terminal.html
+++ b/src/dwij/terminal.html
@@ -9,12 +9,22 @@
 </head>
 <body class="flex-center">
   <div class="root">
-  <div id="progressbar"></div>
-  </div>
+  <!--<div id="progressbar"></div>
+  </div>-->
+  <pre id="our_logo">     
+  /$$$$$$                                 /$$$$$$  /$$                     /$$                       /$$       /$$$$$$$                     /$$                    
+ /$$__  $$                               /$$__  $$| $$                    | $$                      | $$      | $$__  $$                   |__/                    
+| $$  \ $$ /$$    /$$ /$$$$$$   /$$$$$$ | $$  \__/| $$  /$$$$$$   /$$$$$$$| $$   /$$  /$$$$$$   /$$$$$$$      | $$  \ $$  /$$$$$$  /$$$$$$  /$$ /$$$$$$$   /$$$$$$$
+| $$  | $$|  $$  /$$//$$__  $$ /$$__  $$| $$      | $$ /$$__  $$ /$$_____/| $$  /$$/ /$$__  $$ /$$__  $$      | $$$$$$$  /$$__  $$|____  $$| $$| $$__  $$ /$$_____/
+| $$  | $$ \  $$/$$/| $$$$$$$$| $$  \__/| $$      | $$| $$  \ $$| $$      | $$$$$$/ | $$$$$$$$| $$  | $$      | $$__  $$| $$  \__/ /$$$$$$$| $$| $$  \ $$|  $$$$$$ 
+| $$  | $$  \  $$$/ | $$_____/| $$      | $$    $$| $$| $$  | $$| $$      | $$_  $$ | $$_____/| $$  | $$      | $$  \ $$| $$      /$$__  $$| $$| $$  | $$ \____  $$
+|  $$$$$$/   \  $/  |  $$$$$$$| $$      |  $$$$$$/| $$|  $$$$$$/|  $$$$$$$| $$ \  $$|  $$$$$$$|  $$$$$$$      | $$$$$$$/| $$     |  $$$$$$$| $$| $$  | $$ /$$$$$$$/
+ \______/     \_/    \_______/|__/       \______/ |__/ \______/  \_______/|__/  \__/ \_______/ \_______/      |_______/ |__/      \_______/|__/|__/  |__/|_______/                                                                                                                                                                                                                                                                                                                                 
+  </pre>
 </body>
 
 <script src="ascii-progress.js"></script>
-<script src="downloader.js"></script>
+<!--<script src="downloader.js"></script>-->
 <script src="terminal.js"></script>
 
 </html>
