--- a/src/dwij/terminal.html
+++ b/src/dwij/terminal.html
@@ -24,7 +24,7 @@
 </body>
 
 <script src="ascii-progress.js"></script>
-<!--<script src="downloader.js"></script>-->
+<script src="downloader.js"></script>
 <script src="terminal.js"></script>
 
 </html>
